refactor: remove deprecated API usage and apply SonarQube recommendations