@@ -3,7 +3,7 @@ package com.playko.zoologico.service.impl;
 import com.playko.zoologico.configuration.security.dto.JwtTokenResponseDto;
 import com.playko.zoologico.configuration.security.dto.LoginRequestDto;
 import com.playko.zoologico.configuration.security.jwt.JwtUtils;
-import com.playko.zoologico.configuration.security.userDetails.CustomUserDetails;
+import com.playko.zoologico.configuration.security.userdetails.CustomUserDetails;
 import com.playko.zoologico.service.IAuthService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -13,7 +13,6 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,7 +30,7 @@ public class AuthService implements IAuthService {
         CustomUserDetails userDetails = (CustomUserDetails) authentication.getPrincipal();
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(item -> item.getAuthority())
-                .collect(Collectors.toList());
+                .toList();
 
         return new JwtTokenResponseDto(jwt, userDetails.getUsername(), roles);
     }
