@@ -7,7 +7,6 @@ import com.playko.zoologico.entity.Animal;
 import com.playko.zoologico.entity.Especie;
 import com.playko.zoologico.entity.Zona;
 import com.playko.zoologico.exception.NoDataFoundException;
-import com.playko.zoologico.exception.especie.EspecieAlreadyExistsException;
 import com.playko.zoologico.exception.especie.EspecieConAnimalesException;
 import com.playko.zoologico.exception.especie.EspecieNotFoundException;
 import com.playko.zoologico.exception.zona.ZonaNotFoundException;
@@ -20,7 +19,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -46,7 +44,7 @@ public class EspecieService implements IEspecieService {
 
         return especies.stream()
                 .map(this::mapToResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -99,14 +97,14 @@ public class EspecieService implements IEspecieService {
                         especie.getNombre(),
                         especie.getAnimales() != null ? especie.getAnimales().size() : 0
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private EspecieResponseDto mapToResponseDto(Especie especie) {
         List<Long> animalesIds = especie.getAnimales() != null ?
                 especie.getAnimales().stream()
                         .map(Animal::getId)
-                        .collect(Collectors.toList())
+                        .toList()
                 : List.of();
 
         return new EspecieResponseDto(
